--- a/src/main/resources/templates/views/shelter_home.html
+++ b/src/main/resources/templates/views/shelter_home.html
@@ -4,9 +4,8 @@
 <body>
 
 <nav th:replace="partials :: navbar"/>
-<div class="uk-container">
 
-    <div class="uk-grid">
+    <div class="uk-grid uk-margin-auto">
         <!--Buttons-->
         <div class="uk-grid uk-text-center">
             <div class="uk-child-width-expand uk-margin-auto">
@@ -24,7 +23,7 @@
     <hr/>
 
     <!--Info-->
-    <div class="uk-grid uk-column-1-3">
+    <div class="uk-grid uk-column-1-3 uk-margin-auto">
         <div class="uk-grid uk-text-center">
 
             <div class="uk-child-width-expand uk-margin-auto">
@@ -52,6 +51,7 @@
             <div class="uk-child-width-expand uk-margin-auto">
                 <h2> Calender </h2>
                 <!--TODO: Add calender stuff-->
+                Insert Calender Stuff
             </div>
 
             <div class="uk-child-width-expand uk-margin-auto">
@@ -70,7 +70,6 @@
     </div>
 
 
-</div>
 
 <hr/>
 <footer th:replace="partials :: footer"/>
