--- a/src/main/resources/templates/views/shelter_home.html
+++ b/src/main/resources/templates/views/shelter_home.html
@@ -50,8 +50,7 @@
 
             <div class="uk-child-width-expand uk-margin-auto">
                 <h2> Calender </h2>
-                <!--TODO: Add calender stuff-->
-                Insert Calender Stuff
+                <iframe src="https://calendar.google.com/calendar/b/2/embed?title=List%20of%20Events&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=kcdu3013jq0shm8mc1fo8r9034%40group.calendar.google.com&amp;color=%23333333&amp;ctz=America%2FChicago" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             </div>
 
             <div class="uk-child-width-expand uk-margin-auto">
